# ds-aa-lac-dry-corridor

./: .gitignore  .nojekyll  01_binary_metrics.html  02_continuous_metrics.html  03_chirps_tiebreaker.html  04_forecast_drift.html  05_inter_lt_correlation.html  06_enso_stratification.html  07_multi_aoi_comparison.html  07b_aoi_exploration.html  08_enso_conditional_triggers.html  09_threshold_optimization.html  10_honduras_trigger.html  11_country_trigger_optimizations.html  README.md  TriggerExplorationCADC_v2.Rmd  TriggerExplorationCADC_v3.Rmd  _targets.R  appendix_ch07_yearly_rp.html  appendix_technical_notes.html  ds-aa-lac-dry-corridor.Rproj  email_cadc_drought_monitoring.Rmd  email_cadc_drought_monitoring_2025.Rmd  index.html  index_v2.html  intro.html  lac.yaml  pyproject.toml  requirements.txt  search.json
.github/: depends.R  depends_2025.R  depends_additional.R  depends_additional_2025.R
R/: country_trigger_optimization.R  enacts.R  grib_tools.R  iri_nc_to_r.R  load_precip_enacts.R  load_proj_admins.R  monitoring_aws.R  monitoring_viz.R  seas5.R  tar_ecmwf_historical_zonal.R  tar_ecmwf_mars.R  tar_forecast_summaries.R  tar_insuvimeh.R  tar_merge_ecmwf_insuvimeh.R  tar_nextgen_guatemala.R  tar_vhi_cropland.R  trigger_viz.R  utils.R  vhi_rgee.R
analysis/: 01_trigger_threshold_tables.qmd  02_joint_activation_rates.qmd  02a_joint_activation_rates_mars.qmd  02b_joint_activation_rates_cds.qmd  03_ECMWF_MARS_Vs_CDS.qmd  04_April24_activation_status_copernicus.qmd  04_IRI_VHI_Trigger_Simulation.Rmd  05_2025_AOI_adjustments.qmd  05a_create_thresholds_geographically_refined_2025.R  05b_2025_AOI_adjustments.qmd  06_activity_plot.Rmd  07a_StartNet_create_thresholds_geographically_refined.R  07b_StartNet_AOI_adjustments.qmd  08_j2025_june_notice_plot.R  09_insivumeh_202506_update.R  09_insivumeh_202507_update.R  11_enacts_monthly_zonal_chiquimula.R  IRI_VHI_Threshold_Simulation.Rmd  IRI_Zonal.Rmd  IRI_pixel_distributions.qmd  insivumeh_refined_aoi_zonal_stats.R  process_ecmwf_hres_mars.qmd  trigger_threshold_tables.qmd
data-raw/: IRI.qmd  adm0_central_america_dry_corridor_simp.R  (+10 more)
(+79 files in other folders)
