[project]
name = "ds-aa-lac-dry-corridor"
version = "0.1.0"
description = "Dry corridor drought anticipatory action analysis"
requires-python = ">=3.12"
dependencies = [
    "affine>=2.4.0",
    "attrs>=23.1.0",
    "cachetools>=5.3.2",
    "certifi>=2023.11.17",
    "cffi>=1.16.0",
    "cfgrib>=0.9.10.4",
    "cftime>=1.6.3",
    "click>=8.1.7",
    "click-plugins>=1.1.1",
    "cligj>=0.7.2",
    "cloudpickle>=3.0.0",
    "contourpy>=1.2.0",
    "cycler>=0.12.1",
    "dask>=2023.12.1",
    "earthengine-api>=0.1.384",
    "geemap>=0.32.0",
    "eccodes>=1.6.1",
    "ecmwf-api-client>=1.6.3",
    "findlibs>=0.0.5",
    "fonttools>=4.47.0",
    "fsspec>=2023.12.2",
    "google-api-core>=2.15.0",
    "google-api-python-client>=2.111.0",
    "google-auth>=2.25.2",
    "google-auth-httplib2>=0.2.0",
    "google-cloud-core>=2.4.1",
    "google-cloud-storage>=2.14.0",
    "google-crc32c>=1.5.0",
    "google-resumable-media>=2.7.0",
    "googleapis-common-protos>=1.62.0",
    "httplib2>=0.22.0",
    "idna>=3.6",
    "kiwisolver>=1.4.5",
    "locket>=1.0.0",
    "matplotlib>=3.8.2",
    "metview>=1.15.0",
    "numpy>=1.26.2",
    "ocha-stratus>=0.1.7",
    "packaging>=23.2",
    "pandas>=2.1.3",
    "partd>=1.4.1",
    "Pillow>=10.1.0",
    "platformdirs>=4.1.0",
    "pooch>=1.8.0",
    "protobuf>=4.25.1",
    "pyasn1>=0.5.1",
    "pyasn1-modules>=0.3.0",
    "pycparser>=2.21",
    "pygrib>=2.1.5",
    "pyparsing>=3.1.1",
    "pyproj>=3.6.1",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3.post1",
    "PyYAML>=6.0.1",
    "rasterio>=1.3.9",
    "requests>=2.31.0",
    "rioxarray>=0.15.0",
    "rsa>=4.9",
    "scipy>=1.11.4",
    "six>=1.16.0",
    "snuggs>=1.4.7",
    "toolz>=0.12.0",
    "tzdata>=2023.3",
    "uritemplate>=4.1.1",
    "urllib3>=2.1.0",
    "xarray>=2023.12.0",
    "zipp>=3.17.0",
    "azure-storage-blob>=12.28.0",
    "adlfs>=2025.8.0",
    "exactextract>=0.3.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = []
